--- a/package.json
+++ b/package.json
@@ -26,13 +26,20 @@
   "homepage": "https://github.com/codeamar/chariatableWebsite#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.3",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "express-validator": "^3.2.0",
+    "mongoose": "^4.11.1",
+    "morgan": "^1.8.2",
     "node-dev": "^3.1.3",
-    "nodemailer": "^4.0.1"
+    "nodemailer": "^4.0.1",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
