--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.3",
+    "creditcards": "^2.1.2",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "email-templates": "^2.6.0",
